	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================

03/22
	* Changed Soul Breaker's cast time to 700ms. [Skotlex]
	* Updated Elemental Converter ingredients. Thanks2 Haplo [Lupus]
03/21
	* Fixed the inf2 for BA_DISSONANCE to be dance-skill. [Skotlex]
	* Myst Case Card will drop GB even if the card combo's on [Lupus]
03/20
	* Fixed splash area of Ganbantein [Skotlex]
	* Updated atk,def,mdef of NJ/GS items, thanks to Haplo [Lupus]
	- also re-fixed few blackhole89 (def, atk) values
	* Uploaded Kargha's updated item_db.txt with the Gunslinger/Ninja usage bits set.
	  Looked correct to me, if there should still be errors, feel free to revert. [blackhole89]
03/18
	* Updated price and such for NJ/SG weapons
	* Fixed tons of wrong weight, wep lvlm req level items. Big thanks to KarLaeda and Haplo [Lupus]
03/15
	* Alice Doll hat fixed effect, thanks2 Sir_Loon [Lupus]
	- Fixed Moonlit's inf2 not being set to ensemble skill. Thanks to Haplo.
	  [Skotlex]
03/14
	* Modified skill entries for the Wedding recall skills. Updated their
	  splash value to signal the area around the caster where the warp will be
	  placed. [Skotlex]
03/13
	* Changed the mode of the crystals to 193 (can move, can attack, plants)
	  [Skotlex]
	* Devotion won't work on guildmates now (only party-members) [Skotlex]
	* Changed Gravity Field's element to earth so that it may hit hidden chars.
	  [Skotlex]
	* Added missing mob skills to G_HYDRA, G_PARASITE [Lupus]
	* Fixed TK and Soul Linker's position of their job entry in exp2.txt,
	  thanks to Coltaro. [Skotlex]
	* Fixed NPC_GRANDDARKNESS targetting the enemy instead of yourself in
	  mob_skill_db. [Skotlex]