@@ -931,7 +931,7 @@ int unit_skilluse_pos2( struct block_list *src, int skill_x, int skill_y, int sk
 	if (!status_check_skilluse(src, NULL, skill_num, 0))
 		return 0;
 
-	if (map_getcell(src->m, skill_x, skill_y, CELL_CHKNOPASS))
+	if (map_getcell(src->m, skill_x, skill_y, CELL_CHKNOREACH))
 	{	//prevent casting ground targeted spells on non-walkable areas. [Skotlex] 
 		if (sd) clif_skill_fail(sd,skill_num,0,0);
 		return 0;
